# mcp-sentinel

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  cli.py  engine.py  models.py  pyproject.toml  reporter.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  false_positive.yml  new_rule.yml
.github/workflows/: mcp-scan.yml
checks/: base.py  secrets.py  tool_poisoning.py
loaders/: schema.py
mcp_sentinel/: README.md  __init__.py  cli.py  engine.py  models.py  reporter.py
mcp_sentinel/checks/: README.md  __init__.py  base.py  generic.py  parameters.py  provenance.py  secrets.py  tool_poisoning.py  transport.py
mcp_sentinel/loaders/: __init__.py  live.py  schema.py
mcp_sentinel/rules/: README.md  Rules.md  rules.yaml  sources.yaml
mcp_sentinel/rules/staged/promoted/: MCPS-030-atlas-AML-T0075-draft.yaml  MCPS-031-atlas-AML-T0098-draft.yaml  MCPS-032-atlas-AML-T0070-draft.yaml  MCPS-033-atlas-AML-T0101-draft.yaml  MCPS-034-atlas-AML-T0067-draft.yaml  MCPS-035-atlas-AML-T0094-draft.yaml  MCPS-036-atlas-AML-T0109-draft.yaml  MCPS-037-atlas-AML-T0095-000-draft.yaml  MCPS-038-atlas-AML-T0065-draft.yaml  MCPS-039-atlas-AML-T0085-draft.yaml  (+112 more)
planning/: ARCHITECTURE.md  README.md  ROADMAP.md  THREAT-MODEL.md
scripts/: generate_rules.py  ingest_atlas.py  ingest_atlas_nothink.py  promote_staged.py
tests/: README.md  test_checks.py
tests/fixtures/: MCPS-001-malicious.json  MCPS-002-malicious.json  MCPS-003-malicious.json  MCPS-004-malicious.json  MCPS-005-malicious.json  MCPS-006-malicious.json  MCPS-007-malicious.json  MCPS-008-malicious.json  MCPS-009-malicious.json  MCPS-010-malicious.json  MCPS-011-malicious.json  MCPS-012-malicious.json  MCPS-013-malicious.json  MCPS-014-malicious.json  MCPS-015-malicious.json  MCPS-016-malicious.json  MCPS-017-malicious.json  MCPS-018-malicious.json  MCPS-019-malicious.json  MCPS-020-malicious.json  MCPS-021-malicious.json  MCPS-022-malicious.json  MCPS-023-malicious.json  MCPS-024-malicious.json  MCPS-025-malicious.json  MCPS-026-malicious.json  MCPS-027-malicious.json  MCPS-028-malicious.json  MCPS-029-malicious.json  MCPS-030-malicious.json  MCPS-031-malicious.json  MCPS-032-malicious.json  MCPS-033-malicious.json  MCPS-034-malicious.json  MCPS-035-malicious.json  MCPS-036-malicious.json  MCPS-037-malicious.json  MCPS-038-malicious.json  MCPS-039-malicious.json  MCPS-040-malicious.json  (+111 more)
