[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-sentinel"
version = "0.1.0"
description = "Security auditor for MCP (Model Context Protocol) servers"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Josh Conkel", email = "josh.conkel@gmail.com" }
]
keywords = ["mcp", "security", "llm", "agentic-ai", "appsec"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
    "pyyaml>=6",
    "jsonschema>=4",
    "jinja2>=3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
]
phase2 = [
    "anthropic>=0.25",
]

[project.scripts]
mcp-sentinel = "mcp_sentinel.cli:app"

[project.urls]
Homepage = "https://github.com/joshconkel/mcp-sentinel"
"Bug Tracker" = "https://github.com/joshconkel/mcp-sentinel/issues"
"Threat Model" = "https://github.com/joshconkel/mcp-sentinel/blob/main/THREAT-MODEL.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_sentinel*"]

[tool.setuptools.package-data]
mcp_sentinel = ["rules/*.yaml", "rules/prompts/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Test assertion messages intentionally include full rule names for diagnostics.
"tests/*" = ["E501"]
# Typer's design requires typer.Option() calls in function-parameter defaults;
# B008 is a false positive for this well-established CLI framework pattern.
"mcp_sentinel/cli.py" = ["B008"]
# HTML templates embedded as Python strings can't be wrapped at arbitrary
# column boundaries without injecting unwanted whitespace into the rendered output.
"mcp_sentinel/reporter.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
